--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ToDoList</string>
     <string name="add">Add</string>
     <string name="add_item">Add a new item</string>
+    <string name="edit_item">Edit Item below</string>
+    <string name="save">Save</string>
 </resources>
